fl#valid_tests/tests/invalid/itm.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#itm
  RET
    success
    fail
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/itm"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#itm BEGIN
    "nosig" => "ITM with erased signature"
    "nover" => "ITM with erased version"
    "dmghd" => "ITM with damaged header"
  END

  ACTION_PHP_EACH invalid#itm AS file => desc BEGIN
    LAF test_invalid STR_VAR file = EVAL "%file_root%/%file%.itm" desc RET success fail END
  END
END

LAF fl#valid_tests#tests#invalid#itm RET success fail END
